Various fixes after testing on mobile (#2474)

--- a/src/main/scss/fdz-theme/abstract/utility.scss
+++ b/src/main/scss/fdz-theme/abstract/utility.scss
@@ -42,6 +42,10 @@
     padding-top: 0!important;
   }
 
+  .pt8 {
+    padding-top: 8px!important;
+  }
+
   .pt16 {
     padding-top: 16px!important;
   }
